--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
   --hue: 189;
   --first-color: hsl(var(--hue), 75%, 25%);
   --first-color-alt: hsl(var(--hue), 82%, 56%);
-  --first-color-light: hsl(var(--hue), 40%, 80%);
+  --first-color-light: hsl(var(--hue), 40%, 95%);
   --title-color: hsl(var(--hue), 24%, 16%);
   --text-color: hsl(var(--hue), 8%, 45%);
   --text-color-light: hsl(var(--hue), 8%, 60%);
@@ -18,7 +18,7 @@
   --body-font: "Kode Mono", monospace;
   --biggest-font-size: 2rem;
   --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
+  --h2-font-size: 1.35rem;
   --h3-font-size: 1rem;
   --normal-font-size: .938rem;
   --small-font-size: .813rem;
@@ -131,6 +131,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  background-image: linear-gradient(360deg, var(--first-color) 0%, var(--first-color-alt) 100%);
 }
 
 .perfil__img{
@@ -418,7 +419,18 @@ img {
 }
 
 .work__skills{
-  color: var(--first-color-alt);
+  margin-top: .5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.work__skill{
+  padding: 3px 5px;
+  border-radius: 5px;
+  color: var(--first-color);
+  background-color: var(--first-color-light);
+  border: 1px solid var(--first-color);
 }
 
 /*=============== CONTACTO ===============*/
@@ -645,6 +657,7 @@ img {
   
   .perfil__img{
     width: 190px;
+    overflow: hidden;
   }
 
 }
