--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,7 +131,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background-image: linear-gradient(360deg, var(--first-color) 0%, var(--first-color-alt) 100%);
+  background-image: linear-gradient(180deg, var(--first-color-alt)  30%, var(--first-color) 100%);
 }
 
 .perfil__img{
@@ -297,6 +297,7 @@ img {
 
 .home__profession{
   font-size: var(--h2-font-size);
+  min-height: 33px;
 }
 
 .home__socila{
@@ -306,7 +307,7 @@ img {
 }
 
 .home__social-link{
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--title-color);
   transition: color .4s;
 }
@@ -345,6 +346,7 @@ img {
 
 .about__profession{
   font-size: var(--h2-font-size);
+  min-height: 33px;
 }
 
 .about__description b{
@@ -570,11 +572,11 @@ img {
 
 @media screen and (max-width:1024px){
   .about__skills-content{
-    grid-template-columns: repeat(4, max-content);
+    grid-template-columns: repeat(3, max-content);
   }
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:767px){
   .work__container{
     grid-template-columns: repeat(2, 350px);
   }
@@ -620,6 +622,10 @@ img {
 
   .nav__link{
     color: var(--white-color);
+  }
+
+  .nav__link:hover{
+    color: var(--first-color-alt);
   }
 
   .nav__button{
