--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -381,9 +381,15 @@ img {
 
 /*=============== PROFATOLIO =========== ====*/
 
+.work{
+  border-bottom: 8px solid var(--first-color);
+}
+
 .work__container{
   row-gap: 2rem;
+  padding-bottom: 3rem;
 }
+
 
 .work__link{
   display: inline-block;
@@ -421,7 +427,7 @@ img {
 }
 
 .work__skills{
-  margin-top: .5rem;
+  margin: .7rem 0;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -435,14 +441,83 @@ img {
   border: 1px solid var(--first-color);
 }
 
-/*=============== CONTACTO ===============*/
+/*=============== RESEÑAS ===============*/
 
-.contact{
-  border-top: 8px solid var(--first-color);
+.swiper {
+  width: 100%;
+  height: 350px;
 }
+
+.swiper-slide{
+  border: 2px solid var(--first-color);
+  border-radius: 10px ;
+}
+
+.review__content{
+  margin-top: .5rem;
+}
+
+.review__head{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.review__img{
+  width: 80px;
+  height: 80px;
+  border: 5px solid var(--first-color);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.review__img img{
+  filter: grayscale(1);
+}
+
+.review__body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.review__name{
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+}
+.review__profeccion{
+  font-size: var(--h3-font-size);
+  color: var(--first-color-alt);
+}
+
+.review__description{
+  margin: .3rem 1rem  ;
+  
+}
+.review__social{
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.review__social-link{
+  font-size: 1.5rem;
+  color: var(--text-color);
+}
+
+.review__social-link:hover{
+  color: var(--first-color-alt);
+}
+
+/*=============== CONTACTO ===============*/
 
 .contact__container{
   padding-bottom: 4rem;
+}
+
+.section__title span{
+  color: var(--first-color);
 }
 
 .contact__button{
@@ -581,10 +656,24 @@ img {
     grid-template-columns: repeat(2, 350px);
   }
 
+  .review__head{
+    margin-top: 1.2rem;
+  }
+
   .about__container{
     grid-template-columns: 400px;
     justify-content: center;
   }
+
+  .review__description{
+    margin: 1.2rem 2rem ;
+    font-size: 1.1rem;
+  }
+
+  .contact__page{
+    padding-block: 5.6rem 4rem;
+  }
+
 }
 
 @media screen and (min-width:1024px){
@@ -664,6 +753,14 @@ img {
   .perfil__img{
     width: 190px;
     overflow: hidden;
+  }
+
+  .swiper {
+    width: 75%;
+  }
+
+  .contact__page{
+    padding-block: 1rem 4rem;
   }
 
 }
